[package]
name = "aoc_helpers"
version = "1.0.0"
authors = ["Matt Chun-Lum <matt@questionable.engineering>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "~0.10"
num = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
